--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -2,21 +2,18 @@
 <html lang="en">
 
 <head>
-        <link rel="canonical" href="https://vpndevice.github.io" />
+        <link rel="canonical" href="https://vpndevice.github.io/free-nodes/page-2.htm" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>免责申明 - VPN设备 机场订阅节点官网</title>
-        <meta name="keywords" content="免责申明 - VPN设备 机场订阅节点官网" />
-        <meta name="description" content="免责申明 - VPN设备 机场订阅节点官网" />
+    <title>免费节点 - VPN设备 机场订阅节点官网</title>
         <link rel="icon" href="/assets/website/img/v2rayunode/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="VPN设备 机场订阅节点官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://vpndevice.github.io" />
+    <meta property="og:url" content="https://vpndevice.github.io/free-nodes/page-2.htm" />
     <meta property="og:site_name" content="VPN设备 机场订阅节点官网" />
-    <meta property="og:title" content="免责申明 - VPN设备 机场订阅节点官网" />
+    <meta property="og:title" content="免费节点 - VPN设备 机场订阅节点官网" />
     <meta property="og:image" content="/assets/website/img/v2rayunode/favicon.ico" />
-        <meta property="og:description" content="免责申明 - VPN设备 机场订阅节点官网" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -25,7 +22,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - VPN设备 机场订阅节点官网">
+    <meta name="apple-mobile-web-app-title" content="免费节点 - VPN设备 机场订阅节点官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -64,7 +61,7 @@
      crossorigin="anonymous"></script>
 </head>
 
-<body id="page-top" data-page="newly_discovered_nodes">
+<body id="page-top" data-page="category">
         <!-- Navigation
         ==========================================-->
     <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -96,11 +93,10 @@
             <div class="overlay">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12 intro-text">
-                            <h1>免责申明</h1>
+                        <div class="col-md-8 col-md-offset-2 intro-text">
+                            <h1>免费节点</h1>
                             <p>
-                                <a href="/">首页</a> / 免责申明
-                            </p>
+                                <a href="/">首页</a> / 免费节点                            </p>
                         </div>
                     </div>
                 </div>
@@ -112,27 +108,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                    <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-16">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-16-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月16日18.8M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-16-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月16日18.8M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、香港、日本、新加坡、韩国、美国、欧洲等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-15">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-15-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月15日18.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/253352ea5161b569846edfcc6423bfa1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-15-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月15日18.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、欧洲、香港、新加坡、美国、加拿大、日本等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                        
+                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -141,16 +149,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-2-26-node-share.htm" title="VPN设备 | 2月26日20.5M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 2月26日20.5M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-61176.htm" title="附近美甲美睫培训学校哪家好一点（美甲美睫美容学校）">附近美甲美睫培训学校哪家好一点（美甲美睫美容学校）</a></li>
-                        <li class="py-2"><a href="/news/article-61775.htm" title="狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）">狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）</a></li>
-                        <li class="py-2"><a href="/news/article-58313.htm" title="长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方">长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-25-free-node-subscribe-links.htm" title="VPN设备 | 2月25日22.7M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 2月25日22.7M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-63559.htm" title="生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）">生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）</a></li>
+                        <li class="py-2"><a href="/news/article-60611.htm" title="附近有没有养狗的（离我家最近的养狗场）">附近有没有养狗的（离我家最近的养狗场）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-2-19-free-v2ray.htm" title="VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-59463.htm" title="为什么HttpContextAccessor要这么设计?">为什么HttpContextAccessor要这么设计?</a></li>
+                        <li class="py-2"><a href="/news/article-62968.htm" title="附近免费领养小狗在哪里（附近哪里可以领养宠物）">附近免费领养小狗在哪里（附近哪里可以领养宠物）</a></li>
+                        <li class="py-2"><a href="/news/article-60032.htm" title="广州领养宠物救助站地址电话（广州领养宠物救助站地址电话是多少）">广州领养宠物救助站地址电话（广州领养宠物救助站地址电话是多少）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-16-node-share.htm" title="VPN设备 | 2月16日18.8M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 2月16日18.8M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-17-free-v2ray.htm" title="VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-2-22-free-subscribe-node.htm" title="VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-61177.htm" title="动物疫苗生产厂家排名榜最新名单（动物疫苗生产企业排行）">动物疫苗生产厂家排名榜最新名单（动物疫苗生产企业排行）</a></li>
+                        <li class="py-2"><a href="/news/article-62378.htm" title="延吉市宠物店电话（延吉市宠物店电话地址）">延吉市宠物店电话（延吉市宠物店电话地址）</a></li>
+                        <li class="py-2"><a href="/news/article-60610.htm" title="Java高并发优化：中间件redis">Java高并发优化：中间件redis</a></li>
                     </ul>
     </div>
 </div>
